works with first N products from jmeter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+#test
+# couchbase.clusterHost = localhost
+# couchbase.username=Administrator
+#couchbase.password =couch89&
+#couchbase.bucket=Disertatie
+#couchbase.scope=test
+
+#bigData
 couchbase.clusterHost = localhost
 couchbase.username=Administrator
 couchbase.password =couch89&
 couchbase.bucket=Disertatie
-couchbase.scope=test
+couchbase.scope=bigData
 
