added all simple queries(Q1,Q2,Q3,Q4) and complex Queries(Q1,Q3,Q4,Q5)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,16 @@
 #couchbase.scope=test
 
 #bigData
+#couchbase.clusterHost = localhost
+#couchbase.username=Administrator
+#couchbase.password =couch89&
+#couchbase.bucket=Disertatie
+#couchbase.scope=bigData
+
+#allTables
 couchbase.clusterHost = localhost
 couchbase.username=Administrator
 couchbase.password =couch89&
 couchbase.bucket=Disertatie
-couchbase.scope=bigData
+couchbase.scope=allTables
 
